samples/_failures_safe/1761694045_dfb6a2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d13e7c27.c: In function ‘main’:
./samples/SAFE/__tmp_d13e7c27.c:124:5: error: expected declaration or statement at end of input
  124 |     matrix_init(&b, rows2, cols2);
      |     ^~~~~~~~~~~
